# ltd

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  ltd  ltd.cmake  ltd_cfg.h  ltd_cfg.h.in  test_cliargs
app/: main.cpp  project.h  utils.cpp  utils.h
apps/ltd/: main.cpp
doc/: .dox  custom.css
doc/html/: annotated.html  classes.html  classltd_1_1cli__arguments-members.html  classltd_1_1cli__arguments.html  classltd_1_1error-members.html  classltd_1_1error.html  classltd_1_1error__coll__graph.dot  classltd_1_1test__unit-members.html  classltd_1_1test__unit.html  cli__args_8h.html  cli__args_8h__dep__incl.dot  cli__args_8h__incl.dot  cli__args_8h_source.html  custom_dark_theme.css  dir_bfccd401955b95cf8c75461437045ac0.html  errors_8h.html  errors_8h__dep__incl.dot  errors_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  index.html  log_8h.html  log_8h__dep__incl.dot  log_8h__incl.dot  log_8h_source.html  ltd_8h.html  ltd_8h__incl.dot  ltd_8h_source.html  menudata.js  namespaceltd.html  namespaceltd_1_1log.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  (+10 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js  (+6 more)
inc/: args_opt.h  cli_args.h  errors.h  fmt.h  log.h  ltd.h  memory.h  pointers.h  ref_counter.h  smart_ptr.h  stdalias.h  test_unit.h
lib/: args_opt.cpp  cli_args.cpp  errors.cpp  fmt.cpp  log.cpp  memory.cpp  ref_counter.cpp  smart_ptr.cpp  test_unit.cpp
tests/: cliargs.cpp  pointers.cpp
